src/tabs.scss
@import './colours.scss';
@import './components/Button/Button.scss';

$spacing-eight: calc(var(--spacing-1) / 1.25);
$spacing-four: calc($spacing-eight / 2);

#app, #wc {
  .react-tabs {
    flex: 1;
    display: flex;
    flex-flow: column;
    overflow: hidden;
    position: relative;

    &__tab-inner {
      @extend .btn;
      @extend .btn--secondary;

      border: 3px solid transparent;
      margin: $spacing-eight $spacing-four;
      padding: $spacing-four var(--spacing-1);
      white-space: nowrap;

      &--split {
        padding-right: calc(3.5 * var(--spacing-1));
      }
    }
    &__tab-inner-close-btn {
      position: absolute;
      background: transparent;
      right: calc(-1*var(--spacing-1));
      height: 100%;
      padding: var(--spacing-1) calc(1.7 * var(--spacing-1)) var(--spacing-1) var(--spacing-half);
      text-align: center;
      svg {
        margin: 0;
      }
      &:focus-visible {
        border: 0;

        svg {
          border: 3px solid $rpf-brand-raspberry;
        }
      }
    }

    &__tab {
      border: none;
      background-color: transparent;
      padding: 0;
      margin: 0;

      &--selected {
        border-radius: 0;

        .react-tabs__tab-inner {
          border: 3px solid $rpf-teal-shade-20;
        }
      }

      &:hover {
        .react-tabs__tab-inner {
          background-color: $rpi-grey-40;
        }
      }

      &:focus {
        box-shadow: none;
      }

      &:focus-visible {
        outline: none;

        .react-tabs__tab-inner {
          border: 3px solid $rpf-brand-raspberry;
        }
      }
  
      &:focus:after {
        display: none;
      }

      &:first-of-type {
        .react-tabs__tab-inner {
          margin-left: $spacing-eight;
        }
      }

      &:last-of-type {
        .react-tabs__tab-inner {
          margin-right: $spacing-eight;
        }
      }
    }
  
    &__tab-list {
      display: flex;
      overflow: scroll;
      margin: 0;
    }
  
    &__tab-panel--selected {
      flex: 1;
      display: flex;
      flex-flow: column;
    }
  }

  &.--light {
    .react-tabs {
  
      &__tab-list {
        border-bottom: 1px solid $rpf-darkmode-grey85;
      }
  
      &__tab {
        &--selected {
          .react-tabs__tab-inner {
            background-color: $rpi-grey-5;
          }
        }
      }
    }
  }

  &.--dark {
    .react-tabs {
      background-color: $rpf-darkmode-grey18;
  
      &__tab-list {
        border-bottom: 1px solid $rpf-darkmode-grey42;
      }
  
      &__tab {
        &:hover {
          .react-tabs__tab-inner {
            background-color: $rpf-darkmode-grey22;
          }
        }
  
        &--selected {
          color: $rpf-white;

          .react-tabs__tab-inner {
            color: inherit;
            background-color: $rpf-darkmode-grey42;
          }
        }
      }

      &__tab-inner {
        background-color: $rpf-darkmode-grey32;
        color: $rpf-white;
        svg {
          fill: $rpf-white;
        }
      }
    }
  }
}

